commit all changes

--- a/index.html
+++ b/index.html
@@ -1,19 +1,48 @@
 <!DOCTYPE html>
 <html lang="en-US"> ...</html>
     <head> 
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scalce=1.0">
+        <title>Earns giving | Abu Bakarr Alieu Kamara</title>
+        <meta name="description" content="The Earns site includes the site purpose, the target audience, branding, information, and a style guide for the sourse website projects">
+        <meta name="author" content="Abu Bakarr Alieu Kamara">
+
+        <link rel="stylesheet" href="styles/style.css">
+
+
     </head>
     <body> 
 <header>
+    <h1>Arms giving site</h1>
+    <div>Abu Bakarr Alieu Kamara</div>
+
     <nav>
       <a href="#">Home</a>
-      <a href="wwr/">Earns giving website</a>
-      <a href="wwr/site-plan-giving.html">Earns giving siteplan</a>
+      <a href="wwr/">Arms giving website</a>
+      <a href="wwr/site-plan-giving.html">Arms giving siteplan</a>
     </nav>
 </header>
 <main>
    <h1>Abu Bakarr Alieu Kamara  | WDD 130</h1>
-   <img src="images/mine.jpg" " alt="Hello, my name is Abu Bakarr Alieu Kamara" width="199">
+   <h2>This website is about Helping the poor, needy, ophans, disables, and less fortunate. </h2>
+   <h3></h3>
+   <p>"We help try and raise funds through by donations to help all these category of peoples around the world.
+    we do this through donations, contributions from all members in our team, organizing event, and other means."</p>
+    <h3>audience</h3>
+    <p>"everyone"</p>
+    <h2>branding</h2>
+    <p></p>
+    <h3>"website logo"</h3>
+
+   <img src="images/logo.png" alt="Hello, my name is Abu Bakarr Alieu Kamara" width="199"> 
+
+   <h2>element"styleGuide"</h2>
    <p>Hello! My name is Abu Bakarr Alieu Kamara and I am from Freetown,Sierra Leone. I love you all<p>
+    <h3>element"color palete"</h3>
+    <p> </p>
+    palete URL: <a href="https://coolors.co/ffffff-0a2463-ffbe0b-fb5607-c60f7b"
+<!--we are a group of people trying to help those in need.-->
+<p> Helping the needy is our aim. </p>
 
 </main>
 <footer>  
